--- a/manifests/app-svc.yaml
+++ b/manifests/app-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lms-system-service
+  name: bjack-service
 spec:
   selector:
-    app: lms-system
+    app: bjack
   ports:
     - protocol: TCP
       port: 5000
