--- a/job.yaml
+++ b/job.yaml
@@ -1,13 +1,13 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: pe-wa-job
+  name: bjack-job
 spec:
   template:
     spec:
       containers:
-      - name: pe-wa-job
-        image: yash5090/pe-wa:latest
+      - name: bjack-job
+        image: yash5090/bjack:latest
         ports:
         - containerPort: 5000
       restartPolicy: OnFailure
